working on the gameplay basics page

--- a/html/system/gameplay-basics.html
+++ b/html/system/gameplay-basics.html
@@ -1264,7 +1264,10 @@
           <h2 id="facilities">Facilities</h2>
           <p>Explanations for facilities Shiren can use.</p>
           <h3 id="storage">Storage</h3>
-          <p>Text</p>
+          <p>Storage located in Napus Village.<br>You can deposit up to 60 items, and up to 35 items can be placed on the floor.<br>However, items inside pots will vanish, and the size of the pot will not be restored.<br>Traps can be collected using a Trapper Bracelet, and can then be deposited like other items.<br><a href="/shiren2/html/system/gameplay-basics.html#copy_a_journal_return_to_napus_village">Copying a journal or returning to Napus Village</a> can make items vanish under specific conditions.</p>
+          <p>The room is a little small, but attacks and items can be used like when you're inside dungeons,<br>and if you linger long enough, a strong wind will begin to blow.<br>Monsters can be made to appear by throwing a Surprise Pot (with monsters inside),<br>and you'll lose all of the items and Gitan you're carrying if you collapse inside the storage.</p>
+          <p>Scrolls that stick to the ground like Sanctuary Scroll can be picked up again by re-entering the storage.</p>
+          <p>An <a href="/shiren2/html/playing/equipment-gallery.html">equipment gallery</a> is available, where you can display weapons and shields you've obtained.<br>However, note that you won't be able to take displayed items down from the wall.<br>Nothing special happens if you complete the gallery, so it's just for collection and personal enjoyment.</p>
           <h3 id="blacksmith">Blacksmith</h3>
           <p>The Blacksmith located at Shuten Halfway provides the following services:</p>
           <table class="table_less_padding">
@@ -1294,18 +1297,18 @@
             </tbody>
           </table>
           <ul>
-            <li>
+            <li>It's also possible to strengthen weapons by reading a Heaven Scroll or using synthesis.
               <ul>
-                <li></li>
+                <li>Kaburasutegi and Fiery Fuuma require honing the weapon for the final step.</li>
               </ul>
             </li>
-            <li></li>
-            <li>
+            <li>It's also possible to repair bracelets by reading a Plating Scroll.</li>
+            <li>[Erase Seal] lets you select a specific seal to erase, which cannot be done anywhere else.
               <ul>
-                <li></li>
+                <li>Monsoon Doll or Gyandora's special attack can erase a random seal.</li>
               </ul>
             </li>
-            <li></li>
+            <li>He can strengthen non-metal weapons like Clubs too.</li>
           </ul>
           <h3 id="trader_shops">Trader Shops</h3>
           <p>You can purchase and sell items at Trader shops found at Shuten Halfway and Shuten Summit.<br>The list of items for sale is as follows:</p>
@@ -1377,7 +1380,7 @@
             </tbody>
           </table>
           <h3 id="bank">Bank</h3>
-          <p>Text</p>
+          <p>Lets you deposit any amount of Gitan for free, which can then be withdrawn for free as well.<br>Gitan saved in your account will not be lost if you collapse inside of a dungeon.<br>The bank can only be accessed at Shuten Summit in the beginning,<br>but can be accessed from Napus Village after completing the castle.</p>
           <h2 id="save_data_journal">Save Data (Journal)</h2>
           <p>Text</p>
           <h3 id="creating_a_journal">Creating a Journal</h3>
