working on the gameplay basics page

--- a/html/system/gameplay-basics.html
+++ b/html/system/gameplay-basics.html
@@ -1382,17 +1382,23 @@
           <h3 id="bank">Bank</h3>
           <p>Lets you deposit any amount of Gitan for free, which can then be withdrawn for free as well.<br>Gitan saved in your account will not be lost if you collapse inside of a dungeon.<br>The bank can only be accessed at Shuten Summit in the beginning,<br>but can be accessed from Napus Village after completing the castle.</p>
           <h2 id="save_data_journal">Save Data (Journal)</h2>
-          <p>Text</p>
+          <p>Shiren's save data is stored either <strong>on the cartridge</strong> or optionally <strong>in Controller Paks</strong>.<br>Note that Shiren 2 auto-saves progress to the cartridge as you play.</p>
           <h3 id="creating_a_journal">Creating a Journal</h3>
-          <p>Text</p>
+          <p>A new journal (save file) must be created when you first play the game.<br>Once a journal has been created, you can resume by selecting [Continue] at the main menu.<br>Up to 2 journals can be saved on the cartridge.</p>
+          <p>The game will auto-save progress every turn while playing the game.<br>The intention for doing so is to prevent save scumming, and to also allow for recollection playback.<br>That said, you can copy a journal prior to entering a dungeon if you're extra worried about losing items.<br>However, the game truly is meant to be played without backups or save states,<br>since learning from your mistakes is one of the key components of a roguelike.</p>
+          <p><a href="/shiren2/html/system/gameplay-basics.html#score_leaderboard">Scores</a> (Leaderboard) are stored separately from journals, and <strong>can never be erased</strong>.<br>Keep that in mind if you ever consider using cheats, since your save data will have a record of it forever.</p>
           <h3 id="copy_a_journal_return_to_napus_village">Copy a Journal・Return to Napus Village</h3>
-          <p>Text</p>
+          <p>Resuming a copied journal will start the adventure from Napus Village,<br>and all inventory items and Gitan will be lost, including Asuka and Mamo's items.<br>Going forward, you'll be able to resume gameplay like normal by selecting the [Continue] option.</p>
+          <p>Note that items deposited or withdrawn from storage prior to copying the journal will be lost in the copy<br>if you suspend the game inside Napus Storage after depositing or withdrawing items.<br>(In other words, the game reverts you to the point prior to entering Napus Storage).<br>This also occurs when you select [Return to Napus Village] from the main menu.</p>
+          <p>Shiren 2 is somewhat known for randomly deleting save data, so it's best to make backups.<br>Backups can be made using either the second journal slot, or by copying the journal to a Controller Pak.<br>Generally if save data deletion occurs, only the journal you were playing will be affected.</p>
           <h3 id="checking_if_a_journal_is_a_copy">Checking if a Journal is a Copy</h3>
-          <p>Text</p>
+          <p>Original save data is displayed as<br>1: Wanderer (player name)<br>and copied save data is displayed as<br>1. Wanderer (player name)</p>
+          <p>Note the change in character following the file number (: vs .)</p>
           <h3 id="controller_pak">Controller Pak</h3>
-          <p>Text</p>
+          <p>Up to 3 journals can be saved to a Controller Pak.<br>Controller Pak journals must be copied to the cartrige first before they can be resumed.</p>
           <h3 id="save_data_loss">Save Data Loss</h3>
-          <p>Text</p>
+          <p>Shiren 2's save data can be lost if the battery inside the cartridge runs out.<br>These batteries generally last 15~20 years, and as of 2020 the game is 20 years old.</p>
+          <p>Batteries can be replaced without losing save data by copying the journal to a Controller Pak→<br>replacing the cartridge battery→copying the journal back to the cartridge.</p>
         </div>
       </main>
     </div>
