finished the exp and stats page

--- a/html/playing/exp-and-stats.html
+++ b/html/playing/exp-and-stats.html
@@ -34,7 +34,7 @@
                 <li><a href="#leveling_up_enemies">Leveling Up Enemies</a></li>
                 <li><a href="#efficient_level_up_methods">Efficient Level Up Methods</a>
                   <ul>
-                    <li><a href="#make_a_level_up_sword">Make a level up sword</a></li>
+                    <li><a href="#make_a_level_up_weapon">Make a level up weapon</a></li>
                     <li><a href="#level_up_an_enemy">Level up an enemy</a></li>
                     <li><a href="#make_a_happy_gain_staff">Make a Happy Gain Staff</a></li>
                     <li><a href="#use_happy_grass">Use Happy Grass</a></li>
@@ -3992,21 +3992,61 @@
             </tbody>
           </table>
           <h3 id="leveling_up_enemies">Leveling Up Enemies</h3>
-          <p>Text</p>
-          <p>Table</p>
+          <p>Monsters that defeat other monsters will level up, including defeating an ally Snacky.<br>They will also level up if Happy Staff, Happy Grass, or Angel Seed hits them.</p>
+          <p>High level monsters are extremely dangerous near the beginning of an adventure,<br>but they provide a chance to obtain a large amount of experience points.<br>Make use of items to defeat them early on for a head start.</p>
+          <table class="table_less_padding table_text_left">
+            <thead>
+              <tr>
+                <th colspan="2">Easy Level Up Monsters</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Tiger Tosser Family</td>
+                <td>Have it throw a weakened monster at Shiren.</td>
+              </tr>
+              <tr>
+                <td>Horse Ronin Family</td>
+                <td>Have it defeat a monster standing between itself and Shiren using Silver Arrows.</td>
+              </tr>
+              <tr>
+                <td>Wolf Droid Family</td>
+                <td>Have it defeat other monsters by moving Shiren near them so they get hit by explosions.</td>
+              </tr>
+              <tr>
+                <td>Ironhead Family</td>
+                <td>Have it defeat a monster standing between itself and Shiren.</td>
+              </tr>
+              <tr>
+                <td>Stone Beast Family</td>
+                <td>Have it defeat a weakened monster by knocking Shiren into them with its tackle.</td>
+              </tr>
+              <tr>
+                <td>Bow Boy Family</td>
+                <td>Have it defeat a monster standing between itself and Shiren using arrows or Cannonballs.</td>
+              </tr>
+              <tr>
+                <td>Armordillo Family</td>
+                <td>Same as Stone Beast Family.</td>
+              </tr>
+            </tbody>
+          </table>
           <h3 id="efficient_level_up_methods">Efficient Level Up Methods</h3>
-          <h4 id="make_a_level_up_sword">Make a level up sword</h4>
-          <p>Text</p>
+          <h4 id="make_a_level_up_weapon">Make a level up weapon</h4>
+          <p>The 幸 and 天 seals boost the amount of experience points you gain by defeating enemies.<br>A sword with 三回必金 and 13 幸or天 seals will make leveling up extremely fast,<br>and would be great to have for <a href="/shiren2/html/dungeon/onigashima.html">Onigashima</a> and <a href="/shiren2/html/dungeon/sealed-room.html">Sealed Room</a>.<br>Note that you get the best multiplier by using 8 天 seals and filling the rest with 幸 seals.</p>
           <h4 id="level_up_an_enemy">Level up an enemy</h4>
-          <p>Text</p>
+          <p>The idea is to intentionally level up an enemy monster early on to gain a large amount of experience points.<br>See the <a href="/shiren2/html/playing/exp-and-stats.html#high_exp_monsters">High Exp Monsters</a> and the <a href="/shiren2/html/playing/exp-and-stats.html#leveling_up_enemies">Leveling Up Enemies</a> sections above.</p>
           <h4 id="make_a_happy_gain_staff">Make a Happy Gain Staff</h4>
-          <p>Text</p>
+          <p>Insert Happy Grass or Angel Seed into a Grass Gainer, and use Boost Grass before swinging the staff.<br>Note that Grass Tosser can be used as well, if you have a way to reflect the magic back at Shiren.</p>
           <h4 id="use_happy_grass">Use Happy Grass</h4>
-          <p>Text</p>
+          <p>Throw Happy Grass at an enemy monster early on to level them up for more experience points.<br>Once your level is higher, it's best to eat the Happy Grass instead of throwing it.<br>Note that you get the most benefit by eating it right after leveling up.</p>
           <h4 id="defeat_monsters_using_bellthoven">Defeat monsters using a Bellthoven</h4>
-          <p>Text</p>
+          <p>Bellthoven can summon three level 3 monsters at a time using its special attack,<br>so the idea is to gain experience points by defeating the summoned monsters using the 三 seal.<br>Only recommended if you have a strong weapon and shield.</p>
           <h3 id="is_it_important_to_level_up">Is it important to level up?</h3>
-          <p>Text</p>
+          <p>Yes, of course it's important to level up.</p>
+          <p>Higher max HP lowers the risk of collapsing, and your base attack goes up by a slight amount.<br>Late game enemies have powerful attacks, so aim for level ups whenever possible.<br>That said, the exp requirement increases with each level up, so it becomes more difficult as you progress.</p>
+          <p>Strong equipment can make up for being low leveled to some degree.<br>Also, if you find yourself choosing between spending time/resources to level up vs. increasing strength,<br>always go for increasing strength instead of leveling up, since strength is much more difficult to increase.</p>
+          <p>Lastly, note that unlike allies, Shiren's defense does not increase from level ups.<br>The only way to increase Shiren's defense is to equip a shield.</p>
         </div>
       </main>
     </div>
