rename Basics to Gameplay Basics in sidebar

--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -34,7 +34,7 @@
   </div>
   <div class="sidebar-category">System</div>
   <div class="sidebar-links">
-    ┣ <a href="/shiren2/html/system/gameplay-basics.html">Basics</a><br>
+    ┣ <a href="/shiren2/html/system/gameplay-basics.html">Gameplay Basics</a><br>
     ┣ <a href="/shiren2/html/system/synthesis-seals.html">Seals</a>
     / <a href="/shiren2/html/system/monsters.html">Monsters</a><br>
     ┣ <a href="/shiren2/html/system/castle.html">Castle</a>
