--- a/html/playing/faq.html
+++ b/html/playing/faq.html
@@ -37,19 +37,25 @@
           <h3 id="">How do I play Shiren 2 in English?</h3>
           <p>The English Patch hasn't been released yet.<br>Keep on eye on the <a href="https://krikzz.com/forum/index.php?topic=8495">project thread</a> for the latest news regarding the patch.</p>
           <h3 id="">Anything I should know before playing?</h3>
-          <p>Text</p>
+          <ul>
+            <li>There's a glitch that hard-locks the game, so it would be a good idea to read through the <a href="/shiren2/html/system/glitches.html">Glitches</a> page.</li>
+            <li>Asuka and Mamo will lose their items if [Return to Napus Village] is selected at the main menu.<br>This applies even if Asuka and Mamo weren't brought along for the current adventure.<br>So if you don't want them to lose their items, don't select [Return to Napus Village].<br>However, if the game freezes, you won't have any other option than to select [Return to Napus Village].<br>So it's best to keep important items in storage, rather than having Asuka or Mamo carry them.<br>Note that copying a journal will also delete Asuka and Mamo's items in the copy.</li>
+          </ul>
           <h3 id="">Does the 回 seal stack?</h3>
-          <p>Text</p>
+          <p>No, the 回 seal (Healing Sword) does not stack. So only use one seal.</p>
           <h3 id="">Does the 弟 seal stack?</h3>
-          <p>Text</p>
+          <p>Yes, having multiple 弟 seals (Otogiriso) will increase the amount of HP that is restored.<br>Note that it restores HP separately from the 回 seal, so they can be used together.</p>
           <h3 id="">Do seals need to be next to each other to stack?</h3>
-          <p>Text</p>
+          <p>No, the order of seals doesn't matter for stacked effects.</p>
           <h3 id="">Where can I find Perfect Wood?</h3>
-          <p>Text</p>
+          <p>Perfect Wood can only be found in Shuten Trail <span class="warning_text">Mid</span> (8F~).<br>It cannot be obtained in Shuten Trail Hard.</p>
           <h3 id="">What monster should I capture in Road to the End?</h3>
-          <p>Text</p>
+          <p>It's best to capture an Armordillo family monster, so that you can collect items at will.<br>Using this strategy takes a long time, but it's one of the most consistent ways to clear Road to the End.</p>
+          <p>However, Armordillo monsters are rather weak and prone to accidents,<br> so it's a good idea to capture a second one if you happen to come across a second Monster Pot.<br>Armordillo Pop is ideal, but an Armordillo Bro can also be used if you're careful.</p>
+          <p>Other noteworthy monsters include Monsoon Doll, Gazelle Pope, Hyper Gazer, and Shihan.</p>
           <h3 id="">Do you lose upgrade values and seals when making Fiery Fuuma?</h3>
-          <p>Text</p>
+          <p>Yes, upgrade value and seals will be lost when the Katana+99 is transformed into a Fiery Fuuma.</p>
+          <p>This is also the case when the following weapons or shields are created:<br>Kaburasutegi, Daisangen Sword, Ryujin Sword, Wonder Pickaxe, Healing Sword,<br>Helix Shield, Daisangen Shield, Nirvana Shield.</p>
         </div>
       </main>
     </div>
