finished secret phrases page for now

--- a/html/playing/secret-phrases.html
+++ b/html/playing/secret-phrases.html
@@ -23,8 +23,224 @@
       <main id="content" class="box content">
         <div>
           <h2 class="page_heading">Secret Phrases</h2>
-          <p>Text</p>
-          <p>Table</p>
+          <p>Secret phrases are passwords that can be told to Sir Victory Daruma inside the shrine for various rewards.<br>They can be used to obtain powerful equipment such as Homing Blade as early as your second adventure,<br>but doing so will break the balance of the main story dungeons, so it's not recommended.</p>
+          <p>All items obtainable through secret phrases can be obtained through regular gameplay,<br>though some items cannot be found until post-game dungeons.</p>
+          <p>Secret phrases have the following restrictions:</p>
+          <ul>
+            <li>Each secret phrase can only be used once per save file.</li>
+            <li>Only one secret phrase can be used per adventure.<br>So you won't be able to use another one until you either collapse, or clear a dungeon.</li>
+          </ul>
+          <p>※ English secret phrases will be revealed a little while after the patch is released.</p>
+          <table class="table_text_left table_less_padding">
+            <tr>
+              <th colspan="2">Weapon</th>
+              <th colspan="2">Grass</th>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Pickaxe</td>
+              <td></td>
+              <td>Otogiriso</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Club+3</td>
+              <td></td>
+              <td>Angel Seed</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Mallet</td>
+              <td></td>
+              <td>Talk Seed</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Homing Blade</td>
+              <td></td>
+              <td>Revival Grass</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Dried Bonito+3</td>
+              <td></td>
+              <td>Herb</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Fish Spear</td>
+              <th colspan="2">Scroll</th>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Razor Wind+3</td>
+              <td></td>
+              <td>Lightning Scroll</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Nagamaki+3</td>
+              <td></td>
+              <td>Earth Scroll</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Spear</td>
+              <td></td>
+              <td rowspan="2">Heaven Scroll</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Katana+3</td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Manji-Kabura</td>
+              <td></td>
+              <td>Blank Scroll</td>
+            </tr>
+            <tr>
+              <th colspan="2">Shield</th>
+              <th colspan="2">Staff</th>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Leather Shield+3</td>
+              <td></td>
+              <td>Balance Staff [10]</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Holy Shield</td>
+              <th colspan="2">Pot</th>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Tribal Shield+3</td>
+              <td></td>
+              <td>Synthesis Pot [6]</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Scale Shield</td>
+              <th colspan="2">Material</th>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Counter Shield+3</td>
+              <td></td>
+              <td>Perfect Rock</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Blast Shield+3</td>
+              <td></td>
+              <td>Perfect Water</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Beetle Shield+3</td>
+              <td></td>
+              <td>Perfect Wood</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Heavy Shield</td>
+              <td></td>
+              <td>Perfect Iron Sand</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Fuuma Shield</td>
+              <td></td>
+              <td>Perfect Soil</td>
+            </tr>
+            <tr>
+              <th colspan="2">Bracelet</th>
+              <th colspan="2">Other</th>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Pierce Bracelet</td>
+              <td></td>
+              <td>10,000 Gitan</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Scout Bracelet</td>
+              <td></td>
+              <td>30,000 Gitan</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>No Hunger Bracelet</td>
+              <td></td>
+              <td>50,000 Gitan</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Bullseye Bracelet</td>
+              <th colspan="2">Status ↑</th>
+            </tr>
+            <tr>
+              <th colspan="2">Projectile</th>
+              <td></td>
+              <td>Level Up (+3)</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>10 Critical Arrows</td>
+              <td></td>
+              <td>Level Up (+10)</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>20 Porky Stones</td>
+              <td></td>
+              <td>Max HP Up (+10)</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>10 Cannonballs</td>
+              <td></td>
+              <td>Max HP Up (+20)</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>99 Vouchers</td>
+              <td></td>
+              <td>Max Strength Up (+5)</td>
+            </tr>
+            <tr>
+              <th colspan="2">Food</th>
+              <td></td>
+              <td>Max Strength Up (+10)</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Large Riceball</td>
+              <td></td>
+              <td>Max Fullness Up (+10%)</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>Specialty Riceball</td>
+              <th colspan="2">Tips</th>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>Long-lasting Dried Bonito</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>Stealing Technique</td>
+            </tr>
+          </table>
         </div>
       </main>
     </div>
