update secret phrases page

--- a/html/playing/secret-phrases.html
+++ b/html/playing/secret-phrases.html
@@ -30,7 +30,7 @@
             <li>Each secret phrase can only be used once per save file.</li>
             <li>Only one secret phrase can be used per adventure.<br>So you won't be able to use another one until you either collapse, or clear a dungeon.</li>
           </ul>
-          <p>※ English secret phrases will be revealed a little while after the patch is released.</p>
+          <p>※ More English secret phrases will be revealed a little while after the patch is released.</p>
           <table class="table_text_left table_less_padding">
             <tr>
               <th colspan="2">Weapon</th>
@@ -231,7 +231,7 @@
             <tr>
               <td></td>
               <td></td>
-              <td></td>
+              <td>Kaylee</td>
               <td>Long-lasting Dried Bonito</td>
             </tr>
             <tr>
