--- a/html/playing/secret-phrases.html
+++ b/html/playing/secret-phrases.html
@@ -28,7 +28,7 @@
           <p>Secret phrases have the following restrictions:</p>
           <ul>
             <li>Each secret phrase can only be used once per save file.</li>
-            <li>Only one secret phrase can be used per adventure.<br>So you won't be able to use another one until you either collapse, or clear a dungeon.</li>
+            <li>Only one secret phrase can be used per adventure.<br>(So you won't be able to use another one until you either collapse, or clear a dungeon).</li>
           </ul>
           <p>※ More English secret phrases will be revealed a little while after the patch is released.</p>
           <table class="table_text_left table_less_padding">
